--- a/assets/static/sass/partials/_z-index.scss
+++ b/assets/static/sass/partials/_z-index.scss
@@ -1,4 +1,4 @@
-.nav, .nav-trigger {
+.main-header, .nav, .nav-trigger {
 	z-index: 3000;
 }
 
